fixed scrolling on firefox using .docs-body: height: 100%

--- a/app/app.css
+++ b/app/app.css
@@ -5,16 +5,14 @@ p {
     /*margin: 0px;*/
     font-family: "Khand", sans-serif !important;
 }
-
 ul {
     list-style-type: none;
     padding: 0;
 }
 
 .docs-body {
-    /*overflow: hidden;*/
     max-width: 100%;
-    max-height: 100%;
+    height: 100%;
 }
 
 .profile-pic {
@@ -85,7 +83,7 @@ ul {
 }
 #contact .globe.md-button {
     margin:0;
-    padding: 0px;
+    padding: 0;
 }
 #contact span:nth-child(1){
     margin-top: 6px;
@@ -133,7 +131,7 @@ ul {
 }
 
 .social-icons ul {
-    line-height: 0px;
+    line-height: 0;
     position: relative;
     display: inline-block;
     margin: 0;
